--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     display: table;
     font-weight: 100;
-    font-family: 'Lato';
+    font-family: 'Lobster', cursive;
 }
 
 .container {
@@ -24,4 +24,5 @@ body {
 
 .title {
     font-size: 96px;
+    color: #245B89;
 }
