--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -61,6 +61,7 @@ a:visited {
     display: table-cell;
     background-color: #245B89;
     position: fixed;
+    z-index: 999;
 }
 
 .banner-spacer {
