--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,6 +15,7 @@ body {
 a {
     color: inherit;
     text-decoration: inherit;
+    outline: 0;
 }
 
 a:hover {
@@ -73,6 +74,10 @@ a:visited {
     font-size: 30px;
     color: white;
     width: 100vw;
+}
+
+.banner-button {
+    margin: 4px 10px;
 }
 
 /* ------------------- */
