--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,90 +1,75 @@
 html, body {
-    height: 100%;
-}
+  height: 100%; }
 
 body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    display: table;
-    font-weight: 100;
-    font-family: 'Lobster', cursive;
-    font-size: 25px;
-}
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: table;
+  font-weight: 100;
+  font-family: 'Lobster', cursive;
+  font-size: 25px; }
 
 a {
-    color: inherit;
-    text-decoration: inherit;
-    outline: 0;
-}
+  color: inherit;
+  text-decoration: inherit;
+  outline: 0; }
 
 a:hover {
-    color: inherit;
-    text-decoration: inherit;
-}
+  color: inherit;
+  text-decoration: inherit; }
 
 a:visited {
-    color: inherit;
-    text-decoration: inherit;
-}
+  color: inherit;
+  text-decoration: inherit; }
 
 /* ------------------------- */
 /* -- Welcome Page Styles -- */
 /* ------------------------- */
-
 .welcome-container {
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
-}
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle; }
 
 .welcome-content {
-    text-align: center;
-    display: inline-block;
-}
+  text-align: center;
+  display: inline-block; }
 
 .welcome-title {
-    font-size: 160px;
-    color: #245B89;
-}
+  font-size: 160px;
+  color: #245B89; }
 
 .welcome-subtitle {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 500;
-}
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500; }
 
 /* ------------------- */
 /* -- Banner Styles -- */
 /* ------------------- */
-
 .top-banner {
-    text-align: center;
-    display: table-cell;
-    background-color: #245B89;
-    position: fixed;
-    z-index: 999;
-}
+  text-align: center;
+  display: table-cell;
+  background-color: #245B89;
+  position: fixed;
+  z-index: 999; }
 
 .banner-spacer {
-    display: table-cell;
-    color:white;
-}
+  display: table-cell;
+  color: white; }
 
 .banner-title {
-    font-size: 30px;
-    color: white;
-    width: 100vw;
-}
+  font-size: 30px;
+  color: white;
+  width: 100vw; }
 
 .banner-button {
-    margin: 4px 10px;
-}
+  margin: 4px 10px; }
 
 /* ------------------- */
 /* -- IFrame Styles -- */
 /* ------------------- */
-
 .scroll-wrapper {
-    -webkit-overflow-scrolling: touch;
-    overflow-y: hidden;
-}
+  -webkit-overflow-scrolling: touch;
+  overflow-y: hidden; }
+
+/*# sourceMappingURL=custom.css.map */
