--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,9 @@
+/* --------------- */
+/* -- Variables -- */
+/* --------------- */
+/* -------------------- */
+/* -- General Styles -- */
+/* -------------------- */
 html, body {
   height: 100%; }
 
@@ -29,7 +35,8 @@ a:visited {
 .welcome-container {
   text-align: center;
   display: table-cell;
-  vertical-align: middle; }
+  vertical-align: middle;
+  padding: 20px; }
 
 .welcome-content {
   text-align: center;
@@ -41,7 +48,9 @@ a:visited {
 
 .welcome-subtitle {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 500; }
+  font-size: 40px;
+  font-weight: 500;
+  color: #011423; }
 
 /* ------------------- */
 /* -- Banner Styles -- */
@@ -49,7 +58,7 @@ a:visited {
 .top-banner {
   text-align: center;
   display: table-cell;
-  background-color: #245B89;
+  background-color: #337ab7;
   position: fixed;
   z-index: 999; }
 
@@ -71,5 +80,12 @@ a:visited {
 .scroll-wrapper {
   -webkit-overflow-scrolling: touch;
   overflow-y: hidden; }
+
+/* ------------------- */
+/* -- Button Styles -- */
+/* ------------------- */
+.white-text {
+  color: white !important;
+  font-size: 25px !important; }
 
 /*# sourceMappingURL=custom.css.map */
