--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -1,3 +1,16 @@
+
+/* --------------- */
+/* -- Variables -- */
+/* --------------- */
+
+$light-blue: #337ab7;
+$blue: #245B89;
+$dark-blue: #011423;
+
+/* -------------------- */
+/* -- General Styles -- */
+/* -------------------- */
+
 html, body {
     height: 100%;
 }
@@ -36,6 +49,7 @@ a:visited {
     text-align: center;
     display: table-cell;
     vertical-align: middle;
+    padding: 20px;
 }
 
 .welcome-content {
@@ -45,12 +59,14 @@ a:visited {
 
 .welcome-title {
     font-size: 160px;
-    color: #245B89;
+    color: $blue;
 }
 
 .welcome-subtitle {
     font-family: 'Open Sans', sans-serif;
+    font-size: 40px;
     font-weight: 500;
+    color: $dark-blue;
 }
 
 /* ------------------- */
@@ -60,7 +76,7 @@ a:visited {
 .top-banner {
     text-align: center;
     display: table-cell;
-    background-color: #245B89;
+    background-color: $light-blue;
     position: fixed;
     z-index: 999;
 }
@@ -87,4 +103,13 @@ a:visited {
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
     overflow-y: hidden;
+}
+
+/* ------------------- */
+/* -- Button Styles -- */
+/* ------------------- */
+
+.white-text {
+    color:white !important;
+    font-size:25px !important;
 }
