--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -49,7 +49,6 @@ a:visited {
     text-align: center;
     display: table-cell;
     vertical-align: middle;
-    padding: 20px;
 }
 
 .welcome-content {
@@ -113,3 +112,22 @@ a:visited {
     color:white !important;
     font-size:25px !important;
 }
+
+/* ---------------------- */
+/* -- Size Breakpoints -- */
+/* ---------------------- */
+
+/* Extra small devices (phones, less than 768px) */
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .welcome-container {
+        padding: 20px;
+    }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {}
