--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -71,7 +71,7 @@ a:visited {
     vertical-align: middle;
 
     @media (max-width: $small-breakpoint) {
-        padding: 20px;
+        padding: 10px 20px 20px 20px;
     }
 }
 
