--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,7 +22,7 @@ body {
   width: 100%;
   display: table;
   font-weight: 100;
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
   font-size: 25px; }
 
 a {
@@ -61,7 +61,7 @@ a:visited {
       font-size: 130px; } }
 
 .welcome-subtitle {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 40px;
   font-weight: 500;
   color: #011423; }
