--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -61,7 +61,7 @@ a:visited {
       font-size: 130px; } }
 
 .welcome-subtitle {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 40px;
   font-weight: 500;
   color: #011423; }
