--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -12,7 +12,7 @@ $medium-breakpoint: 992px;
 $large-breakpoint: 1200px;
 
 $stylish-font: 'Lobster', cursive;
-$simple-font: 'Open Sans', sans-serif;
+$simple-font: 'Source Sans Pro', sans-serif;
 
 /* ------------------------ */
 /* -- Media Query Format -- */
