--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -62,6 +62,14 @@ a:visited {
     text-decoration: inherit;
 }
 
+.simple-font {
+    font-family: $simple-font !important;
+}
+
+.stylish-font {
+    font-family: $stylish-font !important;
+}
+
 
 /* ------------------------- */
 /* -- Welcome Page Styles -- */
@@ -141,11 +149,25 @@ a:visited {
 }
 
 
+/* ------------------ */
+/* -- Modal Styles -- */
+/* ------------------ */
+.modal-body {
+    font-family: $simple-font;
+}
+
 /* ------------------- */
 /* -- Button Styles -- */
 /* ------------------- */
 
 .white-text {
     color:white !important;
+}
+
+.big-button {
     font-size:25px !important;
+}
+
+.close {
+    font-size:44px !important;
 }
