iframe linking is working and have the start of a comment system set up

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -110,6 +110,12 @@ a:visited {
 .modal-body {
   font-family: "Source Sans Pro", sans-serif; }
 
+/* -------------------------- */
+/* -- Comment Modal Styles -- */
+/* -------------------------- */
+.new-comment {
+  display: none; }
+
 /* ------------------- */
 /* -- Button Styles -- */
 /* ------------------- */
