hide/shows working for the comments modal in the demo

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -128,4 +128,10 @@ a:visited {
 .close {
   font-size: 44px !important; }
 
+#cancel-comment-btn {
+  display: none; }
+
+#submit-comment-btn {
+  display: none; }
+
 /*# sourceMappingURL=custom.css.map */
