--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -181,3 +181,11 @@ a:visited {
     font-size:44px !important;
 }
 
+#cancel-comment-btn {
+    display: none;
+}
+
+#submit-comment-btn {
+    display: none;
+}
+
