--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -125,7 +125,7 @@ a:visited {
 
 .banner-spacer {
     display: table-cell;
-    color:white;
+    color: white;
 }
 
 .banner-title {
@@ -135,7 +135,7 @@ a:visited {
 }
 
 .banner-button {
-    margin: 4px 10px;
+    margin: 4px 15px;
 }
 
 
@@ -146,6 +146,15 @@ a:visited {
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
     overflow-y: hidden;
+    background-color: $light-blue;
+
+    iframe {
+        width:100%;
+        padding-left: 7px;
+        padding-right: 7px;
+        height:93vh;
+        border: none;
+    }
 }
 
 
