testing background colors in iframe on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -109,7 +109,8 @@ a:visited {
     padding-left: 7px;
     padding-right: 7px;
     height: 93vh;
-    border: none; }
+    border: none;
+    background-color: white; }
 
 /* ------------------ */
 /* -- Modal Styles -- */
