--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -154,6 +154,7 @@ a:visited {
         padding-right: 7px;
         height:93vh;
         border: none;
+        background-color: white;
     }
 }
 
