--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -112,7 +112,8 @@ a:visited {
     width: 100%;
     height: 99%;
     border: none;
-    background-color: white; }
+    background-color: white;
+    overflow-y: scroll; }
 
 /* ------------------ */
 /* -- Modal Styles -- */
