--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -157,6 +157,7 @@ a:visited {
         height:99%;
         border: none;
         background-color: white;
+        overflow-y: scroll; 
     }
 }
 
