--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -103,17 +103,14 @@ a:visited {
 .scroll-wrapper {
   -webkit-overflow-scrolling: touch;
   overflow-y: hidden;
-  background-color: #337ab7;
-  width: 100%;
-  padding-left: 7px;
-  padding-right: 7px;
-  height: 93.5vh; }
+  background-color: #337ab7; }
   .scroll-wrapper iframe {
     width: 100%;
-    height: 99%;
+    padding-left: 7px;
+    padding-right: 7px;
+    height: 93vh;
     border: none;
-    background-color: white;
-    overflow-y: scroll; }
+    background-color: white; }
 
 /* ------------------ */
 /* -- Modal Styles -- */
