--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -102,15 +102,14 @@ a:visited {
 /* ------------------- */
 .scroll-wrapper {
   -webkit-overflow-scrolling: touch;
-  overflow-y: hidden;
-  background-color: #337ab7; }
+  overflow-y: hidden; }
   .scroll-wrapper iframe {
     width: 100%;
     padding-left: 7px;
     padding-right: 7px;
     height: 93vh;
     border: none;
-    background-color: white; }
+    background-color: #337ab7; }
 
 /* ------------------ */
 /* -- Modal Styles -- */
