trying to back demo background all blue, no white spaces

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -70,6 +70,10 @@ a:visited {
     font-family: $stylish-font !important;
 }
 
+.page-container {
+    background-color: $light-blue;
+}
+
 
 /* ------------------------- */
 /* -- Welcome Page Styles -- */
