--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -44,6 +44,9 @@ a:visited {
 .stylish-font {
   font-family: "Lobster", cursive !important; }
 
+.page-container {
+  background-color: #337ab7; }
+
 /* ------------------------- */
 /* -- Welcome Page Styles -- */
 /* ------------------------- */
