--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -90,7 +90,7 @@ a:visited {
 
 .banner-spacer {
   display: table-cell;
-  color: #337ab7;
+  color: #337ab7 !important;
   background-color: #337ab7; }
 
 .banner-title {
