--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -129,7 +129,7 @@ a:visited {
 
 .banner-spacer {
     display: table-cell;
-    color: $light-blue;
+    color: $light-blue !important;
     background-color: $light-blue;
 }
 
