--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -153,7 +153,7 @@ a:visited {
     overflow-y: hidden;
 
     iframe {
-        width:100vw;
+        width:100%;
         padding-left: 7px;
         padding-right: 7px;
         height:93vh;
