--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -106,6 +106,7 @@ a:visited {
 /* ------------------- */
 .scroll-wrapper {
   -webkit-overflow-scrolling: touch;
+  width: 100%;
   overflow-y: hidden; }
   .scroll-wrapper iframe {
     width: 100%;
