--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -150,6 +150,7 @@ a:visited {
 
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
+    width: 100%;
     overflow-y: hidden;
 
     iframe {
