--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -106,10 +106,11 @@ a:visited {
 /* ------------------- */
 .scroll-wrapper {
   -webkit-overflow-scrolling: touch;
-  width: 99%;
+  width: 100%;
   overflow-y: hidden; }
   .scroll-wrapper iframe {
-    width: 100%;
+    width: 99%;
+    max-width: 99%;
     padding-left: 7px;
     padding-right: 7px;
     height: 93vh;
