--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -150,11 +150,12 @@ a:visited {
 
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
-    width: 99%;
+    width: 100%;
     overflow-y: hidden;
 
     iframe {
-        width:100%;
+        width: 99%;
+        max-width:99%;
         padding-left: 7px;
         padding-right: 7px;
         height:93vh;
