--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -149,13 +149,14 @@ a:visited {
 /* ------------------- */
 
 .scroll-wrapper {
-    -webkit-overflow-scrolling: touch;
+    /*-webkit-overflow-scrolling: touch;*/
     width: 100%;
     overflow-y: hidden;
 
     iframe {
-        width: 99%;
-        max-width:99%;
+        width: 1px;
+        min-width:100%;
+        *width: 100%;
         padding-left: 7px;
         padding-right: 7px;
         height:93vh;
