--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -105,7 +105,7 @@ a:visited {
 /* -- IFrame Styles -- */
 /* ------------------- */
 .scroll-wrapper {
-  /*-webkit-overflow-scrolling: touch;*/
+  -webkit-overflow-scrolling: touch;
   width: 100%;
   overflow-y: hidden; }
   .scroll-wrapper iframe {
