--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -149,7 +149,7 @@ a:visited {
 /* ------------------- */
 
 .scroll-wrapper {
-    /*-webkit-overflow-scrolling: touch;*/
+    -webkit-overflow-scrolling: touch;
     width: 100%;
     overflow-y: hidden;
 
