--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -151,7 +151,7 @@ a:visited {
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
     width: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
 
     iframe {
         width: 1px;
