--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -156,9 +156,9 @@ a:visited {
     overflow-y: hidden;
 
     iframe {
-        width: 1px !important;
-        min-width:100% !important;
-        *width: 100% !important;
+        width: 1px;
+        min-width:100%;
+        *width: 100%;
         height:93vh;
         border: none;
         background-color: $light-blue;
