another overflow x test

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -45,7 +45,8 @@ a:visited {
   font-family: "Lobster", cursive !important; }
 
 .page-container {
-  background-color: #337ab7; }
+  background-color: #337ab7;
+  overflow-x: hidden; }
 
 /* ------------------------- */
 /* -- Welcome Page Styles -- */
@@ -106,14 +107,13 @@ a:visited {
 /* ------------------- */
 .scroll-wrapper {
   -webkit-overflow-scrolling: touch;
-  width: 100%;
   padding-left: 7px;
   padding-right: 7px;
   overflow-y: hidden; }
   .scroll-wrapper iframe {
     width: 1px;
-    min-width: 100%;
-    *width: 100%;
+    min-width: 99%;
+    *width: 99%;
     height: 93vh;
     border: none;
     background-color: #337ab7; }
