that didnt work

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -45,8 +45,7 @@ a:visited {
   font-family: "Lobster", cursive !important; }
 
 .page-container {
-  background-color: #337ab7;
-  overflow-x: hidden; }
+  background-color: #337ab7; }
 
 /* ------------------------- */
 /* -- Welcome Page Styles -- */
