--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -72,6 +72,7 @@ a:visited {
 
 .page-container {
     background-color: $light-blue;
+    width: 99%;
 }
 
 
@@ -150,14 +151,12 @@ a:visited {
 
 .scroll-wrapper {
     -webkit-overflow-scrolling: touch;
-    padding-left: 7px;
-    padding-right: 7px;
     overflow-y: hidden;
 
     iframe {
         width: 1px;
-        min-width:99%;
-        *width: 99%;
+        min-width:100%;
+        *width: 100%;
         height:93vh;
         border: none;
         background-color: $light-blue;
